// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render correct sidebar view 1`] = `
<aside
  class="sidebar"
>
  <h1 />
</aside>
`;

exports[`Render correct sidebar view with props 1`] = `
<aside
  class="sidebar"
>
  <h1>
    Hello world
  </h1>
</aside>
`;
